# redis-chat

application/: pubspec.yaml
application/lib/: main.dart
application/lib/src/: chat_screen.dart
server/: Cargo.toml
server/src/: main.rs  unique_id.rs
