[package]
name = "server"
version = "0.1.0"
authors = ["Dacode45 <davidrolandayeke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rand = "0.6"
anyhow = "1"
serde = { version = "1", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]
